--- a/index.html
+++ b/index.html
@@ -3,87 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>adi150101 | GitHub Pages</title>
+  <title>HIMMEL STORE | FiveM MLO & Script</title>
 
   <style>
     :root {
-      --primary: #4f46e5;
-      --dark: #0f172a;
-      --light: #f8fafc;
-      --gray: #64748b;
+      --primary: #f97316;
+      --dark: #020617;
+      --card: #0f172a;
+      --text: #e5e7eb;
+      --muted: #94a3b8;
     }
 
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: system-ui, sans-serif;
     }
 
     body {
-      background: linear-gradient(135deg, var(--dark), #020617);
-      color: var(--light);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .container {
-      max-width: 1000px;
-      width: 100%;
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(12px);
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+      background: linear-gradient(180deg, #020617, #020617);
+      color: var(--text);
     }
 
     header {
+      padding: 30px 20px;
+      max-width: 1200px;
+      margin: auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 40px;
+      gap: 15px;
     }
 
     header h1 {
-      font-size: 1.8rem;
-      font-weight: 700;
-    }
-
-    header span {
+      font-size: 1.5rem;
       color: var(--primary);
     }
 
     nav a {
-      color: var(--gray);
+      color: var(--muted);
       text-decoration: none;
       margin-left: 20px;
       font-weight: 500;
-      transition: 0.3s;
     }
 
     nav a:hover {
-      color: var(--light);
+      color: white;
     }
 
     .hero {
+      max-width: 1200px;
+      margin: auto;
+      padding: 60px 20px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 40px;
       align-items: center;
     }
 
-    .hero-text h2 {
-      font-size: 2.5rem;
+    .hero h2 {
+      font-size: 2.8rem;
       margin-bottom: 20px;
     }
 
-    .hero-text p {
-      color: var(--gray);
+    .hero p {
+      color: var(--muted);
       line-height: 1.7;
       margin-bottom: 30px;
     }
@@ -91,42 +77,66 @@
     .btn {
       display: inline-block;
       background: var(--primary);
-      color: white;
-      padding: 14px 28px;
-      border-radius: 12px;
+      color: black;
+      padding: 14px 26px;
+      border-radius: 10px;
       text-decoration: none;
-      font-weight: 600;
-      transition: 0.3s;
+      font-weight: 700;
+      margin-right: 10px;
     }
 
-    .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(79,70,229,0.6);
+    .btn.alt {
+      background: transparent;
+      color: var(--primary);
+      border: 2px solid var(--primary);
+    }
+
+    .products {
+      max-width: 1200px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    .products h3 {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
     }
 
     .card {
-      background: rgba(255,255,255,0.08);
-      padding: 30px;
+      background: var(--card);
       border-radius: 16px;
+      padding: 25px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
     }
 
-    .card h3 {
+    .card h4 {
+      margin-bottom: 10px;
+    }
+
+    .price {
+      color: var(--primary);
+      font-size: 1.3rem;
+      font-weight: bold;
       margin-bottom: 15px;
     }
 
-    .card ul {
-      list-style: none;
-    }
-
-    .card li {
-      margin-bottom: 10px;
-      color: var(--gray);
+    .card p {
+      color: var(--muted);
+      font-size: 0.95rem;
+      margin-bottom: 20px;
     }
 
     footer {
-      margin-top: 50px;
       text-align: center;
-      color: var(--gray);
+      padding: 40px 20px;
+      color: var(--muted);
       font-size: 0.9rem;
     }
 
@@ -145,25 +155,76 @@
       nav a {
         margin: 0 10px;
       }
-
-      .hero-text h2 {
-        font-size: 2rem;
-      }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <header>
-      <h1><span>adi150101</span>.github.io</h1>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Project</a>
-        <a href="#">Contact</a>
-      </nav>
-    </header>
+<header>
+  <h1>HIMMEL STORE</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#produk">Produk</a>
+    <a href="#kontak">Kontak</a>
+  </nav>
+</header>
 
-    <section class="hero">
-      <div class="
+<section class="hero">
+  <div>
+    <h2>FiveM MLO & Script Premium</h2>
+    <p>
+      Menyediakan MLO, interior, dan script FiveM berkualitas tinggi
+      untuk server GTA RP kamu. Optimal, rapi, dan siap pakai.
+    </p>
+    <a href="#produk" class="btn">Lihat Produk</a>
+    <a href="#kontak" class="btn alt">Hubungi Kami</a>
+  </div>
+</section>
+
+<section class="products" id="produk">
+  <h3>🛒 Produk Unggulan</h3>
+
+  <div class="grid">
+    <div class="card">
+      <h4>MLO Police Department</h4>
+      <div class="price">Rp 150.000</div>
+      <p>Interior kantor polisi modern, optimized dan ready RP.</p>
+      <a href="#" class="btn">Beli</a>
+    </div>
+
+    <div class="card">
+      <h4>MLO Hospital</h4>
+      <div class="price">Rp 180.000</div>
+      <p>Rumah sakit lengkap dengan ruang operasi & lobby.</p>
+      <a href="#" class="btn">Beli</a>
+    </div>
+
+    <div class="card">
+      <h4>FiveM Script Job</h4>
+      <div class="price">Rp 100.000</div>
+      <p>Script job custom, support ESX / QB / QBX.</p>
+      <a href="#" class="btn">Beli</a>
+    </div>
+  </div>
+</section>
+
+<section class="products" id="kontak">
+  <h3>📞 Kontak</h3>
+  <div class="grid">
+    <div class="card">
+      <p>📱 WhatsApp</p>
+      <a class="btn" href="https://wa.me/628xxxxxxxxx">Chat WhatsApp</a>
+    </div>
+    <div class="card">
+      <p>💬 Discord</p>
+      <a class="btn alt" href="#">Join Discord</a>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2026 HIMMEL STORE • FiveM Marketplace
+</footer>
+
+</body>
+</html>
