--- a/index.html
+++ b/index.html
@@ -3,227 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HIMMEL STORE | FiveM MLO & Script</title>
-
-  <style>
-    :root {
-      --primary: #f97316;
-      --dark: #020617;
-      --card: #0f172a;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, sans-serif;
-    }
-
-    body {
-      background: linear-gradient(180deg, #020617, #020617);
-      color: var(--text);
-    }
-
-    header {
-      padding: 30px 20px;
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 15px;
-    }
-
-    header h1 {
-      font-size: 1.5rem;
-      color: var(--primary);
-    }
-
-    nav a {
-      color: var(--muted);
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: white;
-    }
-
-    .hero {
-      max-width: 1200px;
-      margin: auto;
-      padding: 60px 20px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 40px;
-      align-items: center;
-    }
-
-    .hero h2 {
-      font-size: 2.8rem;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      color: var(--muted);
-      line-height: 1.7;
-      margin-bottom: 30px;
-    }
-
-    .btn {
-      display: inline-block;
-      background: var(--primary);
-      color: black;
-      padding: 14px 26px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: 700;
-      margin-right: 10px;
-    }
-
-    .btn.alt {
-      background: transparent;
-      color: var(--primary);
-      border: 2px solid var(--primary);
-    }
-
-    .products {
-      max-width: 1200px;
-      margin: auto;
-      padding: 60px 20px;
-    }
-
-    .products h3 {
-      font-size: 2rem;
-      margin-bottom: 30px;
-      text-align: center;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-    }
-
-    .card {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 25px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-    }
-
-    .card h4 {
-      margin-bottom: 10px;
-    }
-
-    .price {
-      color: var(--primary);
-      font-size: 1.3rem;
-      font-weight: bold;
-      margin-bottom: 15px;
-    }
-
-    .card p {
-      color: var(--muted);
-      font-size: 0.95rem;
-      margin-bottom: 20px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 40px 20px;
-      color: var(--muted);
-      font-size: 0.9rem;
-    }
-
-    /* 📱 RESPONSIVE */
-    @media (max-width: 768px) {
-      .hero {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
-
-      nav {
-        width: 100%;
-        text-align: center;
-      }
-
-      nav a {
-        margin: 0 10px;
-      }
-    }
-  </style>
+  <title>HIMMEL STORE | FiveM MLO</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 <header>
   <h1>HIMMEL STORE</h1>
   <nav>
-    <a href="#">Home</a>
-    <a href="#produk">Produk</a>
+    <a href="index.html">Home</a>
+    <a href="produk.html">Produk</a>
     <a href="#kontak">Kontak</a>
   </nav>
 </header>
 
 <section class="hero">
-  <div>
-    <h2>FiveM MLO & Script Premium</h2>
-    <p>
-      Menyediakan MLO, interior, dan script FiveM berkualitas tinggi
-      untuk server GTA RP kamu. Optimal, rapi, dan siap pakai.
-    </p>
-    <a href="#produk" class="btn">Lihat Produk</a>
-    <a href="#kontak" class="btn alt">Hubungi Kami</a>
-  </div>
+  <h2>FiveM MLO & Script Premium</h2>
+  <p>Solusi map & script berkualitas untuk server GTA RP</p>
+  <a class="btn" href="produk.html">Lihat Produk</a>
 </section>
 
-<section class="products" id="produk">
-  <h3>🛒 Produk Unggulan</h3>
+<section class="products">
+  <h3>Produk Unggulan</h3>
 
   <div class="grid">
     <div class="card">
       <h4>MLO Police Department</h4>
       <div class="price">Rp 150.000</div>
-      <p>Interior kantor polisi modern, optimized dan ready RP.</p>
-      <a href="#" class="btn">Beli</a>
+      <p>Interior kantor polisi modern & optimized.</p>
+      <a class="btn" href="produk.html#police">Detail</a>
     </div>
 
     <div class="card">
       <h4>MLO Hospital</h4>
       <div class="price">Rp 180.000</div>
-      <p>Rumah sakit lengkap dengan ruang operasi & lobby.</p>
-      <a href="#" class="btn">Beli</a>
-    </div>
-
-    <div class="card">
-      <h4>FiveM Script Job</h4>
-      <div class="price">Rp 100.000</div>
-      <p>Script job custom, support ESX / QB / QBX.</p>
-      <a href="#" class="btn">Beli</a>
+      <p>Rumah sakit lengkap & siap RP.</p>
+      <a class="btn" href="produk.html#hospital">Detail</a>
     </div>
   </div>
 </section>
 
-<section class="products" id="kontak">
-  <h3>📞 Kontak</h3>
-  <div class="grid">
-    <div class="card">
-      <p>📱 WhatsApp</p>
-      <a class="btn" href="https://wa.me/628xxxxxxxxx">Chat WhatsApp</a>
-    </div>
-    <div class="card">
-      <p>💬 Discord</p>
-      <a class="btn alt" href="#">Join Discord</a>
-    </div>
-  </div>
+<section id="kontak" class="contact">
+  <h3>Hubungi Kami</h3>
+  <a class="btn wa" href="https://wa.me/6281234567890">
+    Chat WhatsApp
+  </a>
 </section>
 
 <footer>
-  © 2026 HIMMEL STORE • FiveM Marketplace
+  © 2026 HIMMEL STORE
 </footer>
 
 </body>
